--- a/vacancies.html
+++ b/vacancies.html
@@ -2,9 +2,20 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="assets/css/desktop/style.css">
+	<meta name="viewport" content="width=device-width">
+	<link rel="stylesheet" type="text/css" href="assets/css/desktop/vacancies.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop/header.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop/footer.css">
+	<link rel="stylesheet" type="text/css" media="(min-width:640px) and (max-width:920px)" href="assets/css/tablet/tablet.css">
+	<link rel="stylesheet" type="text/css" media="(max-device-width:480px)" href="assets/css/mabile/mobile.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+    <script>
+	$( function() {
+	  $( "#accordion" ).accordion();
+	} );
+	</script>
 	<title>Московский городской центр условий и охраны труда</title>
 </head>
 <body>
@@ -16,16 +27,18 @@
 					<img src="assets/img/logo.jpg" alt="logo">
 				</a>
 				<input class="search" type="text" name="search">
-				<a href="#">Версия для слабовидящих</a>
+				<div class="two">
+					<a href="#">Версия для слабовидящих</a>
+				</div>
 				<a class="phone" href="tel:+7(999)-222-33-44">+7(999)-222-33-44</a>
 			</div>
 		</div>
 		<div class="two">
 			<div class="two-1">
-				<a href="document.html">Документы</a>
 				<a href="about.html">О нас</a>
 				<a href="services.html">Услуги</a>
 				<a href="activity.html">Мероприятия</a>
+				<a href="blog.html">Блог</a>
 				<a href="vacancies.html">Вакансии</a>
 				<a href="faq.html">Часто задаваемые вопросы</a>
 				<a href="intelligence.html">Сведения об образовательной организации</a>
@@ -33,7 +46,34 @@
 		</div>
 	</header>
 	<content>
-		
+		<div class="vacancies">
+			<div class="vacancies-1">
+				<h1>Вакансии</h1>
+				<br><hr>
+				<div id="accordion">
+					<h2 class="title">Менеджер по подбору персонала</h2>
+					<div>
+						<p>Краткое описание вакансии: Разнообразный и богатый опыт говорит нам, что внедрение современных методик не даёт нам иного выбора, кроме определения своевременого выполнения сверхзадачи! Но экономическая повестка сегодняшнего дня предполагает независимые способы реализации прогресса.</p>
+					    <p><b>Контактный номер: </b>8 (999)-345-67-89</p>
+					</div>
+					<h2 class="title"><hr>Менеджер по подбору персонала</h2>
+					<div>
+						<p>Краткое описание вакансии: Разнообразный и богатый опыт говорит нам, что внедрение современных методик не даёт нам иного выбора, кроме определения своевременого выполнения сверхзадачи! Но экономическая повестка сегодняшнего дня предполагает независимые способы реализации прогресса.</p>
+					    <p><b>Контактный номер: </b>8 (999)-345-67-89</p>
+					</div>
+					<h2 class="title"><hr>Менеджер по подбору персонала</h2>
+					<div>
+						<p>Краткое описание вакансии: Разнообразный и богатый опыт говорит нам, что внедрение современных методик не даёт нам иного выбора, кроме определения своевременого выполнения сверхзадачи! Но экономическая повестка сегодняшнего дня предполагает независимые способы реализации прогресса.</p>
+					    <p><b>Контактный номер: </b>8 (999)-345-67-89</p>
+					</div>
+					<h2 class="title"><hr>Менеджер по подбору персонала</h2>
+					<div>
+						<p>Краткое описание вакансии: Разнообразный и богатый опыт говорит нам, что внедрение современных методик не даёт нам иного выбора, кроме определения своевременого выполнения сверхзадачи! Но экономическая повестка сегодняшнего дня предполагает независимые способы реализации прогресса.</p>
+					    <p><b>Контактный номер: </b>8 (999)-345-67-89</p>
+					</div>
+				</div>
+			</div>
+		</div>
 	</content>
 	<div class="one">
 		<hr class="width">
