--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop/style.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop/header.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop/footer.css">
+	<link rel="stylesheet" type="text/css" media="(min-width:640px) and (max-width:920px)" href="assets/css/tablet/tablet.css">
+	<link rel="stylesheet" type="text/css" media="(max-device-width:480px)" href="assets/css/mabile/mobile.css">
+
 	<title>Московский городской центр условий и охраны труда</title>
 </head>
 <body>
