--- a/faq.html
+++ b/faq.html
@@ -2,9 +2,19 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="assets/css/desktop/style.css">
+	<meta name="viewport" content="width=device-width">
+	<link rel="stylesheet" type="text/css" href="assets/css/desktop/faq.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop/header.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop/footer.css">
+	<link rel="stylesheet" type="text/css" media="(min-width:640px) and (max-width:920px)" href="assets/css/tablet/tablet.css">
+	<link rel="stylesheet" type="text/css" media="(max-device-width:480px)" href="assets/css/mobile/mobile.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+    <script>
+	$( function() {
+	  $( "#accordion" ).accordion();
+	} );
+	</script>
 	<title>Московский городской центр условий и охраны труда</title>
 </head>
 <body>
@@ -16,16 +26,18 @@
 					<img src="assets/img/logo.jpg" alt="logo">
 				</a>
 				<input class="search" type="text" name="search">
-				<a href="#">Версия для слабовидящих</a>
+				<div class="two">
+					<a href="#">Версия для слабовидящих</a>
+				</div>
 				<a class="phone" href="tel:+7(999)-222-33-44">+7(999)-222-33-44</a>
 			</div>
 		</div>
 		<div class="two">
 			<div class="two-1">
-				<a href="document.html">Документы</a>
 				<a href="about.html">О нас</a>
 				<a href="services.html">Услуги</a>
 				<a href="activity.html">Мероприятия</a>
+				<a href="blog.html">Блог</a>
 				<a href="vacancies.html">Вакансии</a>
 				<a href="faq.html">Часто задаваемые вопросы</a>
 				<a href="intelligence.html">Сведения об образовательной организации</a>
@@ -33,7 +45,34 @@
 		</div>
 	</header>
 	<content>
-		
+		<div class="faq">
+			<div class="faq-1">
+				<h1>Часто задаваемые вопросы</h1>
+				<br><hr>
+				<div id="accordion">
+					<h2 class="title">Какие существуют виды медицинских осмотров?</h2>
+					<div class="faq-2">
+						<p>Обязательные медицинские осмотры могут быть предварительными (при поступлении на работу), периодическими (в течение трудовой деятельности), внеочередными (по медицинским показаниям), постоянными (каждый рабочий день/смену) (Приказ Минздравсоцразвития России от 12.04.2011 N 302н).</p>
+					</div>
+					<h2 class="title"><hr>Кто оплачивает прохождение медицинского осмотра работником?</h2>
+					<div class="faq-2">
+						<p>Во всех случаях обязательные медицинские осмотры проводятся за счет средств работодателя (ст.213 ТК РФ).</p>
+					    <p>Работники на время предварительных, периодических и внеочередных обязательных медицинских осмотров освобождаются от работы, за ними сохраняется средняя заработная плата, которая исчисляется, исходя из его заработка за последние 12 месяцев.</p>
+					    <p>Время медицинских осмотров, которые проводятся в начале, в течение и в конце рабочего дня (смены), включается в рабочее время, соответственно оплата за время осмотра производится как за рабочее время.</p>
+					</div>
+					<h2 class="title"><hr>Какие организации имеют право осуществлять предварительные и периодические медицинские осмотры (обследования) работников?</h2>
+					<div class="faq-2">
+						<p>Осуществлять предварительные и периодические медицинские осмотры (обследования) работников  имеют право медицинскими организациями любой формы собственности, имеющими право на проведение предварительных и периодических осмотров, а также на экспертизу профессиональной пригодности в соответствии с действующими нормативными правовыми актами; (п.4 Приложения N 3 к Приказу Минздравсоцразвития РФ от 12 апреля 2011 г. N 302н):</p>
+					</div>
+					<h2 class="title"><hr>Кто обязан проходить медицинские осмотры?</h2>
+					<div class="faq-2">
+						<p>КПредварительные и периодические медицинские осмотры обязаны проходить:</p>
+					    <p>Работники, занятые на работах с вредными и (или) опасными условиями труда (в том числе на подземных работах), а также на работах, связанных с движением транспорта, проходят обязательные предварительные (при поступлении на работу) и периодические (для лиц в возрасте до 21 года - ежегодные) медицинские осмотры для определения пригодности этих работников для выполнения поручаемой работы и предупреждения профессиональных заболеваний.</p>
+					    <p>Работники организаций пищевой промышленности, общественного питания и торговли, водопроводных сооружений, медицинских организаций и детских учреждений, а также некоторых других работодателей проходят указанные медицинские осмотры в целях охраны здоровья населения, предупреждения возникновения и распространения заболеваний.</p>
+					</div>
+				</div>
+			</div>
+		</div>
 	</content>
 	<div class="one">
 		<hr class="width">
