--- a/about.html
+++ b/about.html
@@ -20,7 +20,9 @@
 					<img src="assets/img/logo.jpg" alt="logo">
 				</a>
 				<input class="search" type="text" name="search">
-				<a href="#">Версия для слабовидящих</a>
+				<div class="two">
+					<a href="#">Версия для слабовидящих</a>
+				</div>
 				<a class="phone" href="tel:+7(999)-222-33-44">+7(999)-222-33-44</a>
 			</div>
 		</div>
@@ -159,7 +161,7 @@
 			</div>
 		</div>
 		<div class="tm">
-			<h2>Московский городской центр условий и охраны труда (ГБУ МГЦУОТ), 2003-2022</h2>
+			<h2>&copyМосковский городской центр условий и охраны труда (ГБУ МГЦУОТ), 2003-2022</h2>
 		</div>
 	</footer>
 </body>
