--- a/faq.html
+++ b/faq.html
@@ -12,7 +12,9 @@
     <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
     <script>
 	$( function() {
-	  $( "#accordion" ).accordion();
+	  $( "#accordion" ).accordion({
+	  	heightStyle: "content"
+	  });
 	} );
 	</script>
 	<title>Московский городской центр условий и охраны труда</title>
@@ -99,7 +101,7 @@
 			</div>
 		</div>
 		<div class="tm">
-			<h2>Московский городской центр условий и охраны труда (ГБУ МГЦУОТ), 2003-2022</h2>
+			<h2>&copyМосковский городской центр условий и охраны труда (ГБУ МГЦУОТ), 2003-2022</h2>
 		</div>
 	</footer>
 </body>
