--- a/intelligence.html
+++ b/intelligence.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop/header.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop/footer.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop/intelligence.css">
+		<link rel="stylesheet" type="text/css" media="(min-width:540px) and (max-width:1040px)" href="assets/css/tablet/tablet.css">
+	<link rel="stylesheet" type="text/css" media="(max-device-width:540px)" href="assets/css/mobile/mobile.css">
 	<title>Московский городской центр условий и охраны труда</title>
 </head>
 <body>
@@ -17,7 +19,9 @@
 					<img src="assets/img/logo.jpg" alt="logo">
 				</a>
 				<input class="search" type="text" name="search">
-				<a href="#">Версия для слабовидящих</a>
+				<div class="two">
+					<a href="#">Версия для слабовидящих</a>
+				</div>
 				<a class="phone" href="tel:+7(999)-222-33-44">+7(999)-222-33-44</a>
 			</div>
 		</div>
@@ -178,7 +182,7 @@
 			</div>
 		</div>
 		<div class="tm">
-			<h2>Московский городской центр условий и охраны труда (ГБУ МГЦУОТ), 2003-2022</h2>
+			<h2>&copyМосковский городской центр условий и охраны труда (ГБУ МГЦУОТ), 2003-2022</h2>
 		</div>
 	</footer>
 </body>
