--- a/blog.html
+++ b/blog.html
@@ -16,16 +16,18 @@
 					<img src="assets/img/logo.jpg" alt="logo">
 				</a>
 				<input class="search" type="text" name="search">
-				<a href="#">Версия для слабовидящих</a>
+				<div class="two">
+					<a href="#">Версия для слабовидящих</a>
+				</div>
 				<a class="phone" href="tel:+7(999)-222-33-44">+7(999)-222-33-44</a>
 			</div>
 		</div>
 		<div class="two">
 			<div class="two-1">
-				<a href="document.html">Документы</a>
 				<a href="about.html">О нас</a>
 				<a href="services.html">Услуги</a>
 				<a href="activity.html">Мероприятия</a>
+				<a href="blog.html">Блог</a>
 				<a href="vacancies.html">Вакансии</a>
 				<a href="faq.html">Часто задаваемые вопросы</a>
 				<a href="intelligence.html">Сведения об образовательной организации</a>
@@ -60,7 +62,7 @@
 			</div>
 		</div>
 		<div class="tm">
-			<h2>Московский городской центр условий и охраны труда (ГБУ МГЦУОТ), 2003-2022</h2>
+			<h2>&copyМосковский городской центр условий и охраны труда (ГБУ МГЦУОТ), 2003-2022</h2>
 		</div>
 	</footer>
 </body>
