--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<div class="item">
 				<div class="item-1">
 					<div class="fasad">
-						<img src="assets/img/1_banner.svg">
+						<img class="svg" src="assets/img/1_banner.svg">
 					</div>
 					<div class="news">
 						<h1>Блог</h1>
@@ -93,16 +93,16 @@
 						<div class="fasad-1">
 							<img class="img-1" src="assets/img/face.jpg">
 						</div>
-					<div class="news trust-1">
-						<h1>Департамент здравоохранения города Москвы</h1>
-						<p><b>Заместитель руководителя</b></p>
-						<p><b>А. Н. Сапсай</b></p><hr>
-						<p>Руководство Департамента здравоохранения города Москвы выражает благодарность подведомственному учреждению Департамента труда и социальной защиты населения города Москвы - ГБУ города Москвы "Московский городской центр условий и охраны труда" за подготовку и проведение выездного обучающего семинара по охране труда на базе Региональной общественной организации Профессиональный союз работников здравоохранения города Москвы...</p>
-						<a class="trust-2" href="blog.html">
-							<p>Читать полностью</p>
-						</a>
-					</div>				
-				</div>
+						<div class="news trust-1">
+							<h1>Департамент здравоохранения города Москвы</h1>
+							<p><b>Заместитель руководителя</b></p>
+							<p><b>А. Н. Сапсай</b></p><hr>
+							<p>Руководство Департамента здравоохранения города Москвы выражает благодарность подведомственному учреждению Департамента труда и социальной защиты населения города Москвы - ГБУ города Москвы "Московский городской центр условий и охраны труда" за подготовку и проведение выездного обучающего семинара по охране труда на базе Региональной общественной организации Профессиональный союз работников здравоохранения города Москвы...</p>
+							<a class="trust-2" href="blog.html">
+								<p>Читать полностью</p>
+							</a>
+						</div>				
+					</div>
 				</div>
 				<div class="partners">
 					<h1>Наши партнёры</h1>
@@ -138,7 +138,9 @@
 							<img class="img" src="assets/img/uchebnyj-centr-professional-238x238.png" alt="logo">
 						</a>
 					</div>
-				
+				</div>
+				<div class="map">
+					
 				</div>
 			</div>
 		</div>
